fix: the project page displayed in wrong size

--- a/src/styles/CardProjectStyle.css
+++ b/src/styles/CardProjectStyle.css
@@ -1,4 +1,4 @@
-#cardProject {
+/* #cardProject {
   padding: 50px;
   position: fixed;
   display: inline-flex;
@@ -17,7 +17,7 @@
 
 #divStyle {
   display: flex;
-}
+} */
 
 #secondGridItem {
   padding: 20px;
